	PR c++/56358 	PR c++/56323 	* name-lookup.c (do_class_using_decl): Use ctor_identifier instead 	of the base name for inheriting ctors. 	(push_class_level_binding_1): Remove inheriting ctor handling. 	* pt.c (tsubst_decl) [USING_DECL]: Likewise. 	* class.c (add_implicitly_declared_members): Adjust.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@196316 138bc75d-0d04-0410-961f-82ee72b054a4